Fix word break in todays menu

--- a/components/TodaysMenu/TodaysMenu.module.scss
+++ b/components/TodaysMenu/TodaysMenu.module.scss
@@ -11,6 +11,7 @@
     margin: 0;
     color: #f7fbbc;
     font-size: 18px;
+    word-break: break-word;
   }
 
   @media (min-width: 400px) {
